WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57985
Fix some threading issues in IconDatabase.
https://bugs.webkit.org/show_bug.cgi?id=57985
Summary
Fix some threading issues in IconDatabase.
David Levin
Reported
2011-04-06 14:52:49 PDT
Fix some threading issues that I uncovered while working on
bug 31639
.
Attachments
Patch
(5.70 KB, patch)
2011-04-06 14:57 PDT
,
David Levin
no flags
Details
Formatted Diff
Diff
Patch
(6.19 KB, patch)
2011-04-07 14:44 PDT
,
David Levin
beidson
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
David Levin
Comment 1
2011-04-06 14:57:05 PDT
Created
attachment 88520
[details]
Patch
David Levin
Comment 2
2011-04-07 14:44:51 PDT
Created
attachment 88703
[details]
Patch
Brady Eidson
Comment 3
2011-04-14 13:57:40 PDT
Comment on
attachment 88703
[details]
Patch Okay!
WebKit Commit Bot
Comment 4
2011-04-14 15:10:04 PDT
Comment on
attachment 88703
[details]
Patch Rejecting
attachment 88703
[details]
from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=eseidel-cq-sf', 'ap..." exit_code: 2 Last 500 characters of output: Tools/Scripts/svn-apply', u'--reviewer', u'Brady Eidson', u'--force']" exit_code: 1 Parsed 2 diffs from patch file(s). patching file Source/WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Source/WebCore/loader/icon/IconDatabase.cpp Hunk #3 FAILED at 1571. 1 out of 3 hunks FAILED -- saving rejects to file Source/WebCore/loader/icon/IconDatabase.cpp.rej Failed to run "[u'/Projects/CommitQueue/Tools/Scripts/svn-apply', u'--reviewer', u'Brady Eidson', u'--force']" exit_code: 1 Full output:
http://queues.webkit.org/results/8398759
David Levin
Comment 5
2011-04-14 15:11:45 PDT
Will land by hand shortly.
David Levin
Comment 6
2011-04-14 16:52:40 PDT
Committed as
http://trac.webkit.org/changeset/83913
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug